                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.0
  *) [TS-1295] Don't assume root privileges during make install.
   Author: Jan-Frode Myklebust

  *) [TS-1294] initscript mentions using /etc/sysconfig/trafficserver, but
   doesn't use it. Author: Jan-Frode Myklebust

  *) [TS-1293] initscript should provide chkconfig header.
   Author: Jan-Frode Myklebust

  *) [TS-1297] Do not link all binaries and plugins with libz and liblzma.

  *) [TS-1296] Do not link all binaries and plugins with libreadline.


Changes with Apache Traffic Server 3.2.0
  *) [TS-1286] Cleanup some code around freelists and allocators.


Changes with Apache Traffic Server 3.1.4
  *) [TS-1281] make check fail on RHEL 5.x.

  *) [TS-1282] Verbosity settings for Via headers is broken.

  *) [TS-1279] Fix build system for gcc < 4.3.

  *) [TS-1277] Fixed issue with IPv6 URLs and remap configuration.

  *) [TS-1195] Support the use of raw IPv6 address in URLs and Host fields.

  *) [TS-1275] Fix startup problem where /var is on a volatile disk.
   Author: Eric Connell.

  *) [TS-1274] Transformation plugins can send content-length with 
   non-identity transfer encoding. Author: Otto van der Schaff.

  *) [TS-1272] workaround for - FATAL: HttpSM.cc:890: failed assert `0`

  *) [TS-1240] Fix race in log buffer queuing code.

  *) [TS-1271] deprecate INKStats API

  *) [TS-1250] Cache inspector does not seem to work properly

  *) [TS-1269] Building outside source tree fails on plugins.

  *) [TS-1222] single tcp connection will limit the cluster throughput.

  *) [TS-475] Accelerated single range requests.
     Based on initial work by ericb, with help from bwyatt.

  *) [TS-1236] HTTP Accept filters do not work on Illumos.

  *) [TS-1075] Workarounds for linux auto-port issues in transparent
   deployments.

  *) [TS-672] cleanup Win32 references.

  *) [TS-1181] Make the overridable configs work with "byte" configs.
