@@ -5909,32 +5909,81 @@ TSHttpTxnPushedRespBodyBytesGet(TSHttpTxn txnp)
   return sm->pushed_response_body_bytes;
 }
 
+// Get a particular milestone hrtime'r. Note that this can return 0, which means it has not
+// been set yet.
 TSReturnCode
-TSHttpTxnStartTimeGet(TSHttpTxn txnp, ink_hrtime *start_time)
+TSHttpTxnMilestoneGet(TSHttpTxn txnp, TSMilestonesType milestone, ink_hrtime *time)
 {
   sdk_assert(sdk_sanity_check_txn(txnp) == TS_SUCCESS);
-
+  sdk_assert(sdk_sanity_check_null_ptr(time) == TS_SUCCESS);
   HttpSM *sm = (HttpSM *) txnp;
+  TSReturnCode ret = TS_SUCCESS;
 
-  if (sm->milestones.ua_begin == 0)
-    return TS_ERROR;
+  switch(milestone) {
+  case TS_MILESTONE_UA_BEGIN:
+    *time = sm->milestones.ua_begin;
+    break;
+  case TS_MILESTONE_UA_READ_HEADER_DONE:
+    *time = sm->milestones.ua_read_header_done;
+    break;
+  case TS_MILESTONE_UA_BEGIN_WRITE:
+    *time = sm->milestones.ua_begin_write;
+    break;
+  case TS_MILESTONE_UA_CLOSE:
+    *time = sm->milestones.ua_close;
+    break;
+  case TS_MILESTONE_SERVER_FIRST_CONNECT:
+    *time = sm->milestones.server_first_connect;
+    break;
+  case TS_MILESTONE_SERVER_CONNECT:
+    *time = sm->milestones.server_connect;
+    break;
+  case TS_MILESTONE_SERVER_CONNECT_END:
+    *time = sm->milestones.server_connect_end;
+    break;
+  case TS_MILESTONE_SERVER_BEGIN_WRITE:
+    *time = sm->milestones.server_begin_write;
+    break;
+  case TS_MILESTONE_SERVER_FIRST_READ:
+    *time = sm->milestones.server_first_read;
+    break;
+  case TS_MILESTONE_SERVER_READ_HEADER_DONE:
+    *time = sm->milestones.server_read_header_done;
+    break;
+  case TS_MILESTONE_SERVER_CLOSE:
+    *time = sm->milestones.server_close;
+    break;
+  case TS_MILESTONE_CACHE_OPEN_READ_BEGIN:
+    *time = sm->milestones.cache_open_read_begin;
+    break;
+  case TS_MILESTONE_CACHE_OPEN_READ_END:
+    *time = sm->milestones.cache_open_read_end;
+    break;
+  case TS_MILESTONE_CACHE_OPEN_WRITE_BEGIN:
+    *time = sm->milestones.cache_open_write_begin;
+    break;
+  case TS_MILESTONE_CACHE_OPEN_WRITE_END:
+    *time = sm->milestones.cache_open_write_end;
+    break;
+  case TS_MILESTONE_DNS_LOOKUP_BEGIN:
+    *time = sm->milestones.dns_lookup_begin;
+    break;
+  case TS_MILESTONE_DNS_LOOKUP_END:
+    *time = sm->milestones.dns_lookup_end;
+    break;
+  case TS_MILESTONE_SM_START:
+    *time = sm->milestones.sm_start;
+    break;
+  case TS_MILESTONE_SM_FINISH:
+    *time = sm->milestones.sm_finish;
+    break;
+  default:
+    *time = -1;
+    ret = TS_ERROR;
+    break;
+  }
 
-  *start_time = sm->milestones.ua_begin;
-  return TS_SUCCESS;
-}
-
-TSReturnCode
-TSHttpTxnEndTimeGet(TSHttpTxn txnp, ink_hrtime *end_time)
-{
-  sdk_assert(sdk_sanity_check_txn(txnp) == TS_SUCCESS);
-
-  HttpSM *sm = (HttpSM *) txnp;
-
-  if (sm->milestones.ua_close == 0)
-    return TS_ERROR;
-
-  *end_time = sm->milestones.ua_close;
-  return TS_SUCCESS;
+  return ret;
 }
 
 TSReturnCode
